--- a/stopwatch.css
+++ b/stopwatch.css
@@ -1,9 +1,18 @@
 body {
     background-color: rgb(50, 50, 50);
-    color: rgb(206, 206, 206);
+    color: rgb(175, 175, 175);
     font-size: 65px;
     margin: 15px;
     font-family: Arial;
+    transition: background-color 0.5s;
+    transition: color 0.5s;
+}
+.body-day {
+    background-color: rgb(220, 220, 220);
+    color: rgb(100, 100, 100);
+}
+.body-day.body-started {
+    color: black;
 }
 .body-started{
     color: white;
@@ -13,6 +22,14 @@ body {
     position: fixed;
     top: 0;
     background-color: rgb(50, 50, 50);
+    transition: background-color 0.5s;
+    transition: top 0.5s;
+}
+.main-day {
+    background-color: rgb(220, 220, 220);
+}
+.main-down {
+    top: 50px;
 }
 .milisec {
     font-size: 45px;
@@ -41,7 +58,7 @@ body {
     margin-right: 20px;
 }
 .bsecond {
-    background-color: rgb(50, 50, 50);
+    background-color: rgba(50, 50, 50, 0);
     border-radius: 50px;
     padding: 5px 15px 0 15px;
     border: solid 2px gray;
@@ -50,7 +67,7 @@ body {
     margin-right: 20px;
 }
 .bthird {
-    background-color: rgb(50, 50, 50);
+    background-color: rgb(50, 50, 50, 0);
     border-radius: 50px;
     border: solid 2px gray;
     padding: 0 15px;
@@ -94,6 +111,9 @@ body {
 .dflaglist-toppic {
     margin-top: 20px;
 }
+.dflaglist-toppic-hide {
+    opacity: 0;
+}
 .hr {
     margin: 0;
     background-color: rgb(92, 92, 92);
@@ -102,7 +122,10 @@ body {
     width: 327px;
 }
 .flag {
-    margin-top: 305px;
+    margin-top: 320px;
+}
+.flag-hide {
+    opacity: 0;
 }
 .laps {
     display: grid;
@@ -112,15 +135,17 @@ body {
     display: grid;
     grid-template-columns: 15px 15px;
     grid-template-rows: 15px;
-    margin-left: 272px;
+    margin-left: 260px;
+    margin-bottom: 10px;
     grid-column-gap: 20px;
 }
 .bupper-button {
-    background-color: rgb(50, 50, 50);
+    background-color: rgba(50, 50, 50, 0);
     border: none;
+    height: 35px;
+    width: 35px;
 }
-/* .imode,.expand-img {
-    height: 15px;
-    width: 15px;
-    mix-blend-mode: multiply;
-} */
+.imode,.expand-img {
+    height: 25px;
+    width: 25px;
+}
