--- a/stopwatch.css
+++ b/stopwatch.css
@@ -40,12 +40,14 @@ body {
 }
 .play {
     mix-blend-mode: multiply;
-    height: 15px;
+    height: 20px;
+    width: 20px;
 }
 .bfirst {
     border-radius: 50px;
     background-color: rgb(135, 207, 255);
-    padding: 18.2px 18.1px 16.2px 20.5px;
+    /* padding: 18.2px 18.1px 16.2px 20.5px; */
+    padding: 15.6px 16.4px 13.8px 17.2px;
     border: none;
     cursor: pointer;
     margin-right: 20px;
